--- a/.gimlet/k8s/penpot/templates/frontend/service.yaml
+++ b/.gimlet/k8s/penpot/templates/frontend/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "penpot.fullname" . }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "penpot.labels" . | nindent 4 }}
 spec:
