--- a/.gimlet/penpot-pr.yaml
+++ b/.gimlet/penpot-pr.yaml
@@ -67,6 +67,4 @@ values:
       tls:
         - secretName: tls-penpot
           hosts:
-          - {{ .BRANCH | sanitizeDNSName }}.penpot.dev.tokens.studio
-
-
+          - "{{ .BRANCH | sanitizeDNSName }}.penpot.dev.tokens.studio"
