--- a/.gimlet/k8s/penpot/templates/exporter/deployment.yaml
+++ b/.gimlet/k8s/penpot/templates/exporter/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.exporter.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -351,3 +352,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+{{- end -}}
