--- a/.gimlet/k8s/penpot/values.yaml
+++ b/.gimlet/k8s/penpot/values.yaml
@@ -174,6 +174,7 @@ frontend:
 ## Penpot Exporter
 ##
 exporter:
+  enabled: true
   ## @param exporter.image.repository The Docker repository to pull the image from.
   ## @param exporter.image.tag The image tag to use.
   ## @param exporter.image.imagePullPolicy The image pull policy to use.
