--- a/.gimlet/penpot-pr.yaml
+++ b/.gimlet/penpot-pr.yaml
@@ -63,7 +63,7 @@ values:
     image:
       pullPolicy: Always
       repository: ghcr.io/tokens-studio/tokens-studio-for-penpot
-      tag: 'backend-pr-{{ .BRANCH | sanitizeDNSName }}' 
+      tag: 'pr-backend-{{ .BRANCH | sanitizeDNSName }}' 
   exporter:
     # Unlikely to be used 
     enabled: false
@@ -73,7 +73,7 @@ values:
     image:
       pullPolicy: Always
       repository: ghcr.io/tokens-studio/tokens-studio-for-penpot
-      tag: 'frontend-pr-{{ .BRANCH | sanitizeDNSName }}'
+      tag: 'pr-frontend-{{ .BRANCH | sanitizeDNSName }}'
     ingress:     
       enabled: true
       annotations:
