--- a/.gimlet/penpot-pr.yaml
+++ b/.gimlet/penpot-pr.yaml
@@ -11,9 +11,6 @@ cleanup:
 chart:
   name: https://github.com/tokens-studio/tokens-studio-for-penpot.git?branch={{ .BRANCH }}&path=/.gimlet/k8s/penpot/
 values:
-  redis:
-    replica:
-      replicaCount: 0
   global:
     # Try use the existing redis
     redisEnabled: false
@@ -36,7 +33,7 @@ values:
         bucket: assets
         endpointURI: http://minio.penpot.svc.cluster.local:80
         existingSecret: 
-          penpot-assets-user-0
+          penpot-assets-user-penpot
         secretKeys:
           accessKeyIDKey: CONSOLE_ACCESS_KEY
           secretAccessKey: CONSOLE_SECRET_KEY
