Add specific esm testing environment for tokens

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,10 @@
     "test:run": "node target/tests.cjs",
     "test:watch": "clojure -M:dev:shadow-cljs watch test",
     "test": "yarn run test:compile && yarn run test:run",
+    "token-test:compile": "clojure -M:dev:shadow-cljs compile test-esm --config-merge '{:autorun false}'",
+    "token-test:run": "bun target/tests-esm.cjs",
+    "token-test:watch": "clojure -M:dev:shadow-cljs watch test-esm",
+    "token-test": "yarn run token-test:compile && yarn run token-test:run",
     "translations:validate": "node ./scripts/validate-translations.js",
     "translations:find-unused": "node ./scripts/find-unused-translations.js",
     "compile": "node ./scripts/compile.js",
