Disable running tests from shadow-cljs directly

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,7 @@
   "author": "Kaleidos INC",
   "private": true,
   "packageManager": "yarn@4.2.2",
-  "browserslist": [
-    "defaults"
-  ],
+  "browserslist": ["defaults"],
   "type": "module",
   "repository": {
     "type": "git",
