--- a/frontend/package.json
+++ b/frontend/package.json
@@ -99,6 +99,7 @@
     "luxon": "^3.4.4",
     "mousetrap": "^1.6.5",
     "opentype.js": "^1.3.4",
+    "platform": "1.3.5",
     "postcss-modules": "^6.0.0",
     "randomcolor": "^0.6.2",
     "react": "18.3.1",
@@ -107,8 +108,11 @@
     "rxjs": "8.0.0-alpha.14",
     "sax": "^1.4.1",
     "source-map-support": "^0.5.21",
+    "stack-trace": "0.0.10",
+    "stacktrace-js": "2.0.2",
     "tdigest": "^0.1.2",
     "ua-parser-js": "^1.0.38",
+    "ws": "7.3.1",
     "xregexp": "^5.1.1"
   }
 }
