♻️  move entire image build process into Dockerfiles
This change moves the entire image build process into Dockerfiles
utilizing multi-stage building.
With this change all images can simply be built with just one invocation
of docker build for each image. With that and especially with the
removal of the docker run step in manage.sh, images can now be built in
unprivileged containers and therefore in a wider variety of CI
solutions.

Signed-off-by: Julian Schacher <julian@jsts.xyz>

--- a/docker/images/Dockerfile.backend
+++ b/docker/images/Dockerfile.backend
@@ -1,3 +1,19 @@
+FROM penpotapp/devenv:latest AS build
+
+COPY --chown=penpot:users . /home/penpot/penpot
+WORKDIR /home/penpot/penpot
+USER penpot:users
+
+RUN ./manage.sh version > build_version.txt
+
+WORKDIR /home/penpot/penpot/backend
+RUN ./scripts/build $(cat ../build_version.txt)
+
+WORKDIR /home/penpot/penpot/bundles
+RUN cp -r ../backend/target/dist ./backend
+RUN cp -r ../build_version.txt ./backend/version.txt
+RUN ../manage.sh put-license-file ./backend
+
 FROM ubuntu:22.04
 
 LABEL maintainer="Andrey Antukh <niwi@niwi.nz>"
@@ -59,7 +75,7 @@ RUN set -eux; \
     tar -xf /tmp/openjdk.tar.gz --strip-components=1; \
     rm -rf /tmp/openjdk.tar.gz;
 
-COPY --chown=penpot:penpot ./bundle-backend/ /opt/penpot/backend/
+COPY --from=build --chown=penpot:penpot /home/penpot/penpot/bundles/backend/ /opt/penpot/backend/
 
 USER penpot:penpot
 WORKDIR /opt/penpot/backend
