--- a/docker/images/Dockerfile.exporter
+++ b/docker/images/Dockerfile.exporter
@@ -1,4 +1,4 @@
-FROM ubuntu:22.04
+FROM debian:bookworm
 LABEL maintainer="Andrey Antukh <niwi@niwi.nz>"
 
 ENV LANG=en_US.UTF-8 \
@@ -13,11 +13,9 @@ RUN set -ex; \
     echo "nameserver 127.0.0.11" > /etc/resolvconf/resolv.conf.d/tail; \
     apt-get -qq update; \
     apt-get -qqy --no-install-recommends install \
-      curl \
-      tzdata \
-      locales \
       ca-certificates \
-      fontconfig \
+      locales \
+      tzdata \
       xz-utils \
     ; \
     rm -rf /var/lib/apt/lists/*; \
@@ -27,33 +25,32 @@ RUN set -ex; \
 RUN set -ex; \
     apt-get -qq update; \
     apt-get -qqy install \
-      imagemagick \
-      ghostscript \
-      netpbm \
-      poppler-utils \
-      potrace \
+      fonts-liberation \
       gconf-service \
+      ghostscript \
+      imagemagick \
       libasound2 \
-      libatk1.0-0 \
       libatk-bridge2.0-0 \
+      libatk1.0-0 \
       libatomic1 \
       libcairo2 \
       libcups2 \
       libdbus-1-3 \
       libexpat1 \
       libfontconfig1 \
+      libgbm1 \
       libgcc1 \
       libgconf-2-4 \
       libgdk-pixbuf2.0-0 \
       libglib2.0-0 \
       libgtk-3-0 \
       libnspr4 \
+      libnss3 \
       libpango-1.0-0 \
       libpangocairo-1.0-0 \
       libx11-6 \
       libx11-xcb1 \
       libxcb1 \
-      libxcb-dri3-0 \
       libxcomposite1 \
       libxcursor1 \
       libxdamage1 \
@@ -65,9 +62,9 @@ RUN set -ex; \
       libxshmfence1 \
       libxss1 \
       libxtst6 \
-      fonts-liberation \
-      libnss3 \
-      libgbm1 \
+      netpbm \
+      poppler-utils \
+      potrace \
     ; \
     rm -rf /var/lib/apt/lists/*;
 
