--- a/frontend/package.json
+++ b/frontend/package.json
@@ -116,6 +116,7 @@
     "source-map-support": "^0.5.21",
     "style-dictionary": "patch:style-dictionary@npm%3A4.0.0-prerelease.36#~/.yarn/patches/style-dictionary-npm-4.0.0-prerelease.36-55c0fc33bd.patch",
     "tdigest": "^0.1.2",
+    "tinycolor2": "npm:^1.6.0",
     "ua-parser-js": "^1.0.38",
     "xregexp": "^5.1.1"
   }
